--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,11 +2,7 @@
 
 <footer>
 	<p>
-		Copyright (C) {{ .Date.Year }} Ariel Costas Guerrero.
-		Tots els drets reservats.
-
-		Tots els continguts de aquest web estan sota llicència CC BY-SA 4.0,
-		per tant, es poden compartir i modificar, sempre que es reconegui la
-		autoria i es mantingui la mateixa llicència.
-	</span>
+		Copyright &copy; {{ .Date.Year }} Ariel Costas Guerrero. Todos los derechos reservados.<br>
+		Cedido bajo licencia <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.es">CC BY-SA 4.0</a> salvo que se indique lo contrario.
+	</p>
 </footer>
