--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,1 +1,13 @@
-<h1>CostasDEV</h1>
+<header>
+	<h1>
+		<a href="{{ .Site.Home.RelPermalink }}">
+			CostasDEV
+		</a>
+	</h1>
+
+	<nav>
+		{{ range .Site.Home.Pages }}
+		<a href="{{ .Permalink }}">{{ .Title }}</a>
+		{{ end }}
+	</nav>
+</header>
