--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{ .Page.Title }} - Ariel Costas</title>
+
+	{{ $stylesheetOptions := dict "transpiler" "libsass" }}
+	{{ $stylesheet := resources.Get "css/base.scss" | resources.ToCSS $stylesheetOptions | minify }}
+	<link rel="stylesheet" href='{{ $stylesheet.RelPermalink }}'>
 </head>
 
 <body>
 	{{ partial "partials/header.html" . }}
 
-	{{ block "main" . }}
-	{{ end }}
+	<main>
+		{{ block "main" . }}
+		{{ end }}
+	</main>
 
 	{{ partial "partials/footer.html" . }}
 </body>
