--- a/assets/css/fonts.scss
+++ b/assets/css/fonts.scss
@@ -13,3 +13,11 @@
 	font-display: swap;
 	src: url('/fonts/aleo-italic.ttf') format('truetype-variations');
 }
+
+@font-face {
+	font-family: 'Rubik';
+	font-style: normal;
+	font-weight: 100 900;
+	font-display: swap;
+	src: url('/fonts/rubik.ttf') format('truetype-variations');
+}
