--- a/assets/css/root.scss
+++ b/assets/css/root.scss
@@ -1,8 +1,10 @@
 :root {
 	font-size: 16px;
 	font-weight: 400;
-	font-family: 'Aleo', consolas;
+	font-family: 'Rubik', sans-serif;
 	line-height: 1.5;
+
+	--font-heading: 'Aleo', "Roboto Slab", sans-serif;
 
 	--accent-1: hsl(152, 90%, 20%);
 	--accent-2: hsl(152, 90%, 30%);
