--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -4,6 +4,7 @@
 	<ul>
 		{{ range .Pages.ByLastmod }}
 		<li>
+			<time datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" }}">{{ .Date.Format "2006-01-02" }}</time>
 			<a href="{{ .Permalink }}">{{ .Page.Title }}</a>
 		</li>
 		{{ end }}
