--- a/assets/css/partials/article.scss
+++ b/assets/css/partials/article.scss
@@ -1,6 +1,9 @@
-article {
-	max-width: 70ch;
-	margin: 0 auto;
+main {
+	max-width: 65ch;
+	margin: 0 auto 3rem;
+	width: 100%;
+	padding: 1rem;
+
 	font-size: 1.25rem;
 
 	>* {
