--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 
 <footer>
 	<p>
-		Copyright &copy; {{ .Date.Year }} Ariel Costas Guerrero. Todos los derechos reservados.<br>
+		Copyright &copy; 2023 Ariel Costas Guerrero. Todos los derechos reservados.<br>
 		Cedido bajo licencia <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.es">CC BY-SA 4.0</a> salvo que se indique lo contrario.
 	</p>
 </footer>
