--- a/assets/css/partials/article.scss
+++ b/assets/css/partials/article.scss
@@ -1,9 +1,10 @@
 main {
-	max-width: 65ch;
 	margin: 0 auto 3rem;
-	width: 100%;
 	padding: 1rem;
-
+	box-sizing: border-box;
+	
+	max-width: 65ch;
+	width: 100%;
 	font-size: 1.25rem;
 
 	>* {
@@ -11,8 +12,14 @@ main {
 		margin-bottom: 1.75rem;
 	}
 
+	>p>code {
+		word-break: break-word;
+		font-size: 0.9em;
+		color: var(--accent-1);
+	}
+
 	h1 {
-		font-size: 3.5rem;
+		font-size: 2.25rem;
 		line-height: 1;
 		margin-bottom: 1rem;
 	}
@@ -21,5 +28,9 @@ main {
 		display: block;
 		font-size: 0.85rem;
 		margin-bottom: 1rem;
+	}
+
+	pre {
+		overflow: scroll;
 	}
 }
