--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,7 @@
 
 	<nav>
 		{{ range .Site.Home.Pages }}
-		<a href="{{ .Permalink }}">{{ .Title }}</a>
+		<a href="{{ .RelPermalink }}">{{ .Title }}</a>
 		{{ end }}
 	</nav>
 </header>
