--- a/assets/css/root.scss
+++ b/assets/css/root.scss
@@ -1,10 +1,12 @@
 :root {
+	--font-heading: 'Aleo', "Roboto Slab", "Times New Roman", serif;
+	--font-body: 'Rubik', Helvetica, sans-serif;
+	--font-mono: 'Roboto Mono', "Ubuntu Mono", "Fira Code", "Courier New", "Consolas", , monospace;
+
 	font-size: 16px;
 	font-weight: 400;
-	font-family: 'Rubik', sans-serif;
 	line-height: 1.5;
-
-	--font-heading: 'Aleo', "Roboto Slab", sans-serif;
+	font-family: var(--font-body);
 
 	--accent-1: hsl(152, 90%, 20%);
 	--accent-2: hsl(152, 90%, 30%);
