--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,4 +5,10 @@
 		Copyright &copy; 2023 Ariel Costas Guerrero. Todos los derechos reservados.<br>
 		Cedido bajo licencia <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.es">CC BY-SA 4.0</a> salvo que se indique lo contrario.
 	</p>
+
+	<div>
+		<a href="https://masto.es/@arielcg" rel="me">Mastodon</a>
+		<a href="https://github.com/arielcostas">GitHub</a>
+		<a href="https://linkedin.com/in/ariel-costas">LinkedIn</a>
+	</div>
 </footer>
