--- a/assets/css/partials/footer.scss
+++ b/assets/css/partials/footer.scss
@@ -1,23 +1,12 @@
 footer {
 	background-color: #333;
 	color: white;
+	text-align: center;
 
 	padding: 0.5rem 1rem;
 
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
 
 	a {
 		color: var(--accent-7);
-	}
-
-	div {
-		display: flex;
-		gap: 1rem;
-		
-		font-size: 1.125rem;
-
-		font-family: var(--font-mono);
 	}
 }
