Make dates monospaced

--- a/assets/css/root.scss
+++ b/assets/css/root.scss
@@ -1,7 +1,7 @@
 :root {
 	--font-heading: 'Aleo', "Roboto Slab", "Times New Roman", serif;
 	--font-body: 'Rubik', Helvetica, sans-serif;
-	--font-mono: 'Roboto Mono', "Ubuntu Mono", "Fira Code", "Courier New", "Consolas", , monospace;
+	--font-mono: 'Roboto Mono', "Ubuntu Mono", "Fira Code", "Consolas" , monospace;
 
 	font-size: 16px;
 	font-weight: 400;
