--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -10,7 +10,10 @@
 <ul>
 	{{ range .Pages }}
 
-	<li>{{ .PublishDate.Format "02/01" }} <a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+	<li>
+		<time datetime="{{ .PublishDate.Format " 2006-01-02T15:04:05-07:00"}}">{{ .PublishDate.Format "02/01" }}</time>
+		<a href="{{ .RelPermalink }}">{{ .Title }}</a>
+	</li>
 	{{ end }}
 </ul>
 {{ end }}
