--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,6 +29,9 @@
 	</main>
 
 	{{ partial "partials/footer.html" . }}
+
+	{{ $script := resources.Get "js/navbar.js" | minify }}
+	<script src='{{ $script.RelPermalink }}'></script>
 </body>
 
 </html>
