--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header class="collapsed">
 	<div id="brand">
-		<button id="mobile-menu" type="button">
+		<button id="mobile-menu" type="button" aria-controls="nav-pages nav-socials">
 			<img src="/icons/menu-2.svg" alt="Menu" width="24" height="24" />
 		</button>
 
