--- a/assets/css/_root.scss
+++ b/assets/css/_root.scss
@@ -1,11 +1,11 @@
 :root {
-	--font-heading: 'Aleo', "Roboto Slab", "Times New Roman", serif;
-	--font-body: 'Rubik', Helvetica, sans-serif;
-	--font-mono: 'Roboto Mono', "Ubuntu Mono", "Fira Code", "Consolas" , monospace;
+	--font-heading: "Roboto Slab", "Times New Roman", serif;
+	--font-body: Arial, Helvetica, sans-serif;
+	--font-mono: "Fira Code", "Consolas" , monospace;
 
 	font-size: 16px;
 	font-weight: 400;
-	line-height: 1.5;
+	line-height: 1.65;
 	font-family: var(--font-body);
 
 	--accent-1: hsl(152, 90%, 20%);
