--- a/assets/css/_root.scss
+++ b/assets/css/_root.scss
@@ -8,11 +8,18 @@
 	line-height: 1.65;
 	font-family: var(--font-body);
 
+	--header-background: #efefef;
+	--header-color: var(--accent-1);
+
+	--body-background: #f5f5f5;
+	--body-color: #212121;
+
+	--footer-background: #212121;
+	--footer-color: #ffffff;
+
 	--accent-1: hsl(152, 90%, 20%);
 	--accent-2: hsl(152, 90%, 30%);
 	--accent-3: hsl(152, 90%, 40%);
-	--accent-4: hsl(152, 90%, 50%);
-	--accent-5: hsl(152, 90%, 60%);
-	--accent-6: hsl(152, 90%, 70%);
-	--accent-7: hsl(152, 90%, 80%);
+	--accent-4: hsl(152, 90%, 60%);
+	--accent-5: hsl(152, 90%, 80%);
 }
