--- a/assets/css/partials/_footer.scss
+++ b/assets/css/partials/_footer.scss
@@ -1,11 +1,11 @@
 footer {
-	background-color: #333;
-	color: white;
+	background-color: var(--footer-background);
+	color: var(--footer-color);
 	text-align: center;
 
 	padding: 0.5rem 1rem;
 
 	a {
-		color: var(--accent-7);
+		color: var(--accent-5);
 	}
 }
