--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{ .Page.Title }} - Ariel Costas</title>
 
+	<link rel="canonical" href="{{ .Permalink }}">
+
 	<meta name="description" content="{{ .Page.Description }}">
 
 	<meta property="og:title" content="{{ .Page.Title }} - Ariel Costas">
