--- a/assets/css/partials/_article.scss
+++ b/assets/css/partials/_article.scss
@@ -1,11 +1,16 @@
 main {
-	margin: 0 auto 3rem;
-	padding: 1rem;
 	box-sizing: border-box;
+	margin: 0.75rem 1rem 3rem;
+	padding: 1.5rem 2.5rem;
+	border-radius: $floatingRadius;
+	box-shadow: var(--shadow);
 
-	max-width: 72ch;
-	width: 100%;
+	align-self: center;
+
+	max-width: 82ch;
 	font-size: 1.25rem;
+
+	background-color: var(--header-background);
 
 	a {
 		color: var(--accent-1);
@@ -30,7 +35,7 @@ main {
 	}
 
 	h1 {
-		font-size: 2.25rem;
+		font-size: 2.75rem;
 		line-height: 1;
 		margin-bottom: 1rem;
 	}
