--- a/assets/css/_root.scss
+++ b/assets/css/_root.scss
@@ -1,5 +1,5 @@
 :root {
-	--font-heading: "Roboto Slab", "Times New Roman", serif;
+	--font-heading: "Roboto Slab", "Segoe UI";
 	--font-body: Arial, Helvetica, sans-serif;
 	--font-mono: "Fira Code", "Consolas" , monospace;
 
@@ -8,11 +8,11 @@
 	line-height: 1.65;
 	font-family: var(--font-body);
 
-	--header-background: #efefef;
-	--header-color: var(--accent-1);
-
-	--body-background: #f5f5f5;
+	--body-background: #efefef;
 	--body-color: #212121;
+
+	--header-background: #ffffff;
+	--header-color: var(--accent-1);
 
 	--footer-background: #212121;
 	--footer-color: #ffffff;
@@ -22,4 +22,11 @@
 	--accent-3: hsl(152, 90%, 40%);
 	--accent-4: hsl(152, 90%, 60%);
 	--accent-5: hsl(152, 90%, 80%);
+
+	--shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.15);
 }
+
+$floatingRadius: 0.5rem;
+
+$breakpointTablet: 480px;
+$breakpointDesktop: 1024px;
