--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -12,8 +12,10 @@ body {
 body {
 	min-height: 100vh;
 	max-width: 100vw;
+
 	display: flex;
 	flex-direction: column;
+	gap: 0.5rem;
 	
 	background-color: var(--body-background);
 	color: var(--body-color);
