--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -1,20 +1,24 @@
-{{ define "main" }}
-{{- .Content }}
-
-{{ with .Site.GetPage "section" "blog" }}
-<h2 id="{{ .RelPermalink }}">
-	<a class="anchor" href="{{ .RelPermalink | safeURL }}">#</a>
-	Últimas entradas
-</h2>
-
-<ul>
-	{{ range .Pages }}
-
-	<li>
-		<time datetime="{{ .PublishDate.Format " 2006-01-02T15:04:05-07:00"}}">{{ .PublishDate.Format "02/01" }}</time>
-		<a href="{{ .RelPermalink }}">{{ .Title }}</a>
-	</li>
-	{{ end }}
-</ul>
+{{ define "head_extras" }}
+	{{ partial "ld/website.html" . }}
 {{ end }}
+
+{{ define "main" }}
+	{{- .Content }}
+
+	{{ with .Site.GetPage "section" "blog" }}
+	<h2 id="{{ .RelPermalink }}">
+		<a class="anchor" href="{{ .RelPermalink | safeURL }}">#</a>
+		Últimas entradas
+	</h2>
+
+	<ul>
+		{{ range .Pages }}
+
+		<li>
+			<time datetime="{{ .PublishDate.Format " 2006-01-02T15:04:05-07:00"}}">{{ .PublishDate.Format "02/01" }}</time>
+			<a href="{{ .RelPermalink }}">{{ .Title }}</a>
+		</li>
+		{{ end }}
+	</ul>
+	{{ end }}
 {{ end}}
