--- a/assets/css/_root.scss
+++ b/assets/css/_root.scss
@@ -1,12 +1,8 @@
 :root {
-	--font-heading: "Roboto Slab", "Segoe UI";
-	--font-body: Arial, Helvetica, sans-serif;
-	--font-mono: "Fira Code", "Consolas" , monospace;
-
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.65;
-	font-family: var(--font-body);
+	font-family: $mainFontStack;
 
 	--body-background: #efefef;
 	--body-color: #212121;
