--- a/layouts/partials/ld/website.html
+++ b/layouts/partials/ld/website.html
@@ -3,6 +3,6 @@
 	"@context": "http://schema.org",
 	"@type": "WebSite",
 	"id": "https://www.costas.dev/",
-	"url": "https://www.costas.dev/",
+	"url": "https://www.costas.dev/"
 }
 </script>
