--- a/layouts/partials/ld/post.html
+++ b/layouts/partials/ld/post.html
@@ -4,9 +4,9 @@
 		"@type": "BlogPosting",
 		"@id": {{ printf "%s" .Page.Permalink }},
 		"url": {{ printf "%s" .Page.Permalink }},
-		"headline": {{ printf "%s" .Title | safeJS }},
+		"headline": "{{ printf "%s" .Title | safeJS }}",
 		{{- with .Params.summary -}}		
-		"description": {{ printf "%s" . | safeJS }},
+		"description": "{{ printf "%s" . | safeJS }}",
 		{{- end }}
 		{{ with .Params.date -}}
 		"datePublished": {{ time.Format "2006-01-02T15:04:05-07:00" . }},
