--- a/assets/css/markup/_render-heading.scss
+++ b/assets/css/markup/_render-heading.scss
@@ -1,8 +1,8 @@
 main {
 	h1, h2, h3, h4, h5, h6 {
-		a {
+		a.anchor {
 			color: var(--accent-1);
-			font-weight: 900;
+			font-weight: 700;
 			text-decoration: none;
 
 			&:hover {
