--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -2,7 +2,7 @@
 	{{- .Content }}
 
 	<ul>
-		{{ range .Pages.ByLastmod }}
+		{{ range .Pages.ByLastmod.Reverse }}
 		<li>
 			<time datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" }}">{{ .Date.Format "2006-01-02" }}</time>
 			<a href="{{ .RelPermalink }}">{{ .Page.Title }}</a>
