--- a/assets/css/markup/_render-heading.scss
+++ b/assets/css/markup/_render-heading.scss
@@ -1,7 +1,7 @@
 main {
 	h1, h2, h3, h4, h5, h6 {
 		a.anchor {
-			color: var(--accent-1);
+			color: $accentDark;
 			font-weight: 700;
 			text-decoration: none;
 
