--- a/assets/css/partials/_footer.scss
+++ b/assets/css/partials/_footer.scss
@@ -1,11 +1,11 @@
 footer {
-	background-color: var(--footer-background);
-	color: var(--footer-color);
+	background-color: $dark;
+	color: $light;
 	text-align: center;
 
 	padding: 0.5rem 1rem;
 
 	a {
-		color: var(--accent-5);
+		color: $accentLight;
 	}
 }
