Fix spacing issue in smaller pages

--- a/src/partials/MainWrapper.astro
+++ b/src/partials/MainWrapper.astro
@@ -15,6 +15,7 @@
 		padding: 1.5rem 3rem;
 		border-radius: $floatingRadius;
 		box-shadow: $shadow;
+		margin-bottom: auto;
 
 		align-self: center;
 
