--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -5,93 +5,20 @@ const schema = {
 	"@context": "https://schema.org",
 	"@type": "WebPage",
 	"url": "https://www.costas.dev/portfolio",
-	"headline": "Mi trayectoria como desarrollador"
+	"headline": "Mi portfolio de proyectos"
 };
 ---
 
-<Layout title="Portfolio" description="Mi trayectoria como desarrollador">
+<Layout title="Portfolio" description="Los proyectos en los que he trabajado">
 	<script type="application/ld+json" slot="head-jsonld" set:html={JSON.stringify(schema)}></script>
 
-	<h1>Mi trayectoria como desarrollador</h1>
+	<h1>Mi portfolio</h1>
 
 	<p>
-		Soy un desarrollador de software que vive en Vigo, España. Me gusta
-		mucho la tecnología, y me gusta aprender cosas nuevas. Me dedico
-		profesionalmente al desarrollo de software en todos sus ámbitos: desde
-		el diseño de la arquitectura, la implementación y el despliegue en
-		producción, pasando por otros aspectos como la experiencia de usuario,
-		la accesibilidad y la seguridad.
-	</p>
-
-	<h2>Tecnologías que domino</h2>
-
-	<p>
-		Domino principalmente el ecosistema de Microsoft: .NET (C#), ASP.NET
-		Core, SQL Server, Azure y Azure DevOps. También tengo experiencia con
-		otros lenguajes y tecnologías, como PHP, Python y Java. Además, tengo
-		conocimientos de frontend con
-		<abbr title="Hypertext Markup Language">HTML5</abbr>,
-		<abbr title="Cascading Style Sheets">CSS3</abbr>, JavaScript y
-		TypeScript.
-	</p>
-
-	<p>
-		También tengo experiencia con herramientas de DevOps como Docker,
-		Kubernetes, Terraform y GitHub Actions; así como el ecosistema Cloud de
-		Azure.
-	</p>
-
-	<h2>Educación y credenciales</h2>
-
-	<ul>
-		<li>
-			<strong>Microsoft Certified: Azure Developer Associate</strong>:
-			acredita mis conocimientos en el desarrollo de aplicaciones en
-			Azure. <a
-				href="https://learn.microsoft.com/api/credentials/share/en-us/ariel-costas/E15072607CCF2DA9?sharingId=149A1CD9C13790F4"
-				>Ver credencial</a
-			>.
-		</li>
-
-		<li>
-			<strong>Microsoft Certified: Azure DevOps Engineer Expert</strong>:
-			acredita mis conocimientos en la implementación de metodologías de
-			DevOps en Azure con Azure DevOps y GitHub. <a
-				href="https://learn.microsoft.com/api/credentials/share/en-us/ariel-costas/5FB94876A1701595?sharingId=149A1CD9C13790F4"
-				>Ver credencial</a
-			>
-		</li>
-
-		<li>
-			<strong
-				>Técnico Superior en Desarrollo de Aplicaciones Multiplataforma</strong
-			>: título de formación profesional de grado superior, obtenido en el
-			<a href="https://iesteis.es/">IES de Teis</a> en Vigo.
-		</li>
-	</ul>
-
-	<h2>Experiencia laboral</h2>
-
-	<h3>Estelaria Solutions (Q3 2023 - actualidad)</h3>
-
-	<p>
-		Desarrollo de aplicaciones full-stack, principalmente en PHP con
-		Symfony, MongoDB y JavaScript Vanilla. Además, implementé una cantidad
-		considerable de mejoras en usabilidad, accesibilidad y rendimiento.
-	</p>
-
-	<p>
-		También me encargo de la gestión de la infraestructura en AWS, y de la
-		implementación de herramientas de colaboración como Jira y GitHub.
-	</p>
-
-	<h3>FCT en Polygon-E (Q2 2023)</h3>
-
-	<p>
-		Realicé mis prácticas de formación profesional en la empresa Polygon-E,
-		donde desarrollé varias aplicaciones de gestión interna con ASP.NET Core
-		y Blazor, desplegando sobre entornos <i>on-premise</i> con Windows Server,
-		IIS y SQL Server.
+		En esta sección encontrarás una lista de los proyectos en los que he
+		trabajado, tanto para terceros como propios. Si quieres más información
+		sobre alguno de ellos, no dudes en
+		<a href="/contacto">contactar conmigo</a>.
 	</p>
 
 	<h2>Proyectos para terceros (freelance)</h2>
