Bring back the blog

--- a/src/partials/Header.astro
+++ b/src/partials/Header.astro
@@ -36,6 +36,7 @@ import Favicon from "../assets/Favicon.astro";
 		<a href="/">Inicio</a>
 		<a href="/trajectory">Trayectoria</a>
 		<a href="/portfolio">Portfolio</a>
+		<a href="/blog">Blog</a>
 		<a href="/contact">Contacto</a>
 	</nav>
 
