--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,10 @@
 import { getCollection } from "astro:content";
 import Layout from "../layouts/Layout.astro";
 
+const blogCollection = (await getCollection("blog")).sort((a, b) => {
+	return b.data.publishedAt.getTime() - a.data.publishedAt.getTime();
+});
+
 const schema = {
 	"@context": "http://schema.org",
 	"@type": "WebSite",
@@ -29,6 +33,7 @@ const schema = {
 		su conocimiento. Me gusta la programación, el diseño web y la
 		creatividad. Me encanta crear cosas nuevas y aprender de los demás.
 	</p>
+	<a href="/trajectory">Más información sobre mí</a>
 
 	<h2>¿Qué hago?</h2>
 	<p>
@@ -36,6 +41,28 @@ const schema = {
 		Cloud en una empresa de tecnología. Me encargo de desarrollar
 		aplicaciones web en PHP y desplegarlas en la nube de forma segura y eficiente.
 	</p>
-
 	<a href="/portfolio">Mi portfolio</a>
+
+	<h2>Últimas entradas del blog</h2>
+	<ul>
+		{
+			blogCollection.slice(0, 5).map((p) => {
+				const date = Intl.DateTimeFormat("es-ES", {
+					day: "2-digit",
+					month: "short",
+					year: "numeric",
+				}).format(p.data.publishedAt);
+				return (
+					<li>
+						<time datetime={p.data.publishedAt.toISOString()}>
+							{date}
+						</time>
+						<a href={`/blog/${p.slug}`}>{p.data.title}</a>
+					</li>
+				);
+			})
+		}
+	</ul>
+	<a href="/blog">Ver todas las entradas</a>
+
 </Layout>
