fix build issues

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ interface Props {
 	description: string;
 }
 
-const { title, description, transitionName, transitionAnimate } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
