Add bluesky link

--- a/src/partials/Header.astro
+++ b/src/partials/Header.astro
@@ -19,12 +19,12 @@ import Favicon from "../assets/Favicon.astro";
 				fill="none"
 				stroke-linecap="round"
 				stroke-linejoin="round"
-				>
+			>
 				<title>Hambuger menu</title>
 				<path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
 					d="M4 6l16 0"></path><path d="M4 12l16 0"></path><path
-					d="M4 18l16 0"></path></svg
-			>
+					d="M4 18l16 0"></path>
+			</svg>
 		</button>
 
 		<a href="/" style="line-height: 1;">
@@ -83,6 +83,23 @@ import Favicon from "../assets/Favicon.astro";
 				<path d="M8 8l0 .01"></path>
 				<path d="M12 16l0 -5"></path>
 				<path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
+			</svg>
+		</a>
+		<a href="https://bsky.app/profile/costas.dev" title="BlueSky">
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				width="24"
+				height="24"
+				viewBox="0 0 24 24"
+				fill="none"
+				stroke="currentColor"
+				stroke-width="2"
+				stroke-linecap="round"
+				stroke-linejoin="round"
+				class="icon icon-tabler icons-tabler-outline icon-tabler-brand-bluesky"
+				><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+					d="M6.335 5.144c-1.654 -1.199 -4.335 -2.127 -4.335 .826c0 .59 .35 4.953 .556 5.661c.713 2.463 3.13 2.75 5.444 2.369c-4.045 .665 -4.889 3.208 -2.667 5.41c1.03 1.018 1.913 1.59 2.667 1.59c2 0 3.134 -2.769 3.5 -3.5c.333 -.667 .5 -1.167 .5 -1.5c0 .333 .167 .833 .5 1.5c.366 .731 1.5 3.5 3.5 3.5c.754 0 1.637 -.571 2.667 -1.59c2.222 -2.203 1.378 -4.746 -2.667 -5.41c2.314 .38 4.73 .094 5.444 -2.369c.206 -.708 .556 -5.072 .556 -5.661c0 -2.953 -2.68 -2.025 -4.335 -.826c-2.293 1.662 -4.76 5.048 -5.665 6.856c-.905 -1.808 -3.372 -5.194 -5.665 -6.856z"
+				></path>
 			</svg>
 		</a>
 	</nav>
@@ -170,7 +187,8 @@ import Favicon from "../assets/Favicon.astro";
 			font-size: 1.2rem;
 			text-transform: uppercase;
 			letter-spacing: 0.1rem;
-			transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
+			transition: color 0.2s ease-in-out,
+				border-bottom-color 0.2s ease-in-out;
 			color: $accent;
 			line-height: 1;
 			border-bottom: 2px solid transparent;
@@ -252,7 +270,9 @@ import Favicon from "../assets/Favicon.astro";
 </style>
 
 <script>
-	const mobileMenuButton = document.getElementById("mobile-menu") as HTMLButtonElement;
+	const mobileMenuButton = document.getElementById(
+		"mobile-menu"
+	) as HTMLButtonElement;
 	const headerElement = document.querySelector("header") as HTMLElement;
 
 	mobileMenuButton.addEventListener("click", () => {
