Fix header alignment and give some more hue to header

--- a/src/partials/Header.astro
+++ b/src/partials/Header.astro
@@ -115,6 +115,7 @@ import Favicon from "../assets/Favicon.astro";
 
 		display: flex;
 		flex-direction: column;
+		align-items: stretch;
 		justify-content: space-between;
 		gap: 0.5rem 0;
 
@@ -246,6 +247,7 @@ import Favicon from "../assets/Favicon.astro";
 				#nav-socials {
 					display: flex;
 					max-height: unset;
+					align-self:center;
 				}
 			}
 		}
