--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -38,6 +38,7 @@ const schema = {
 		"name": "Ariel Costas",
 	}
 };
+
 ---
 
 <Layout title="Blog" description="Artículos sobre desarrollo, tecnología y otras temáticas que pueda querer compartir.">
@@ -58,7 +59,7 @@ const schema = {
 				<ul>
 					{posts.map((post) => (
 						<li>
-							<a href={`/blog/${post.slug}`}>{post.data.title}</a>
+							<a href={`/blog/${post.id}`}>{post.data.title}</a>
 						</li>
 					))}
 				</ul>
