--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -11,6 +11,7 @@ const schema = {
 
 <Layout title="Contacto" description="Ponte en contacto conmigo">
 	<script
+		is:inline
 		type="application/ld+json"
 		slot="head-jsonld"
 		set:html={JSON.stringify(schema)}
