--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,7 @@ const schema = {
 
 <Layout title="Inicio" description="Página de inicio de mi web">
 	<script
+		is:inline
 		type="application/ld+json"
 		slot="head-jsonld"
 		set:html={JSON.stringify(schema)}
