--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -9,7 +9,7 @@ export const getStaticPaths = (async () => {
 		params: { id: entry.id },
 		props: { entry },
 	}));
-}) as GetStaticPaths;
+}) satisfies GetStaticPaths;
 
 const { entry } = Astro.props;
 const { Content } = await render(entry);
@@ -44,7 +44,7 @@ const schema = {
 ---
 
 <Layout title={entry.data.title} description={entry.data.metaDescription}>
-	<script type="application/ld+json" slot="head-jsonld" set:html={JSON.stringify(schema)}></script>
+	<script is:inline type="application/ld+json" slot="head-jsonld" set:html={JSON.stringify(schema)}></script>
 
 	<h1>{entry.data.title}</h1>
 	<small>
