--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,5 +1,4 @@
 ---
-import { ViewTransitions } from "astro:transitions";
 import Layout from "../layouts/Layout.astro";
 import TechnologyBadge from "../partials/TechnologyBadge.astro";
 
@@ -13,6 +12,7 @@ const schema = {
 
 <Layout title="Portfolio" description="Los proyectos en los que he trabajado">
 	<script
+		is:inline
 		type="application/ld+json"
 		slot="head-jsonld"
 		set:html={JSON.stringify(schema)}
